add help fix toolbar alignment issue on switching orientation fix last page remembering issue with non flowable books improve book identification improve toolbar interface coding refactory